--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ Pillow = "^9.2.0"
 djangorestframework = "^3.13.1"
 djangorestframework-simplejwt = "^5.2.0"
 drf-writable-nested = "^0.7.0"
+python-dateutil = "^2.8.2"
+pytest-django = "^4.5.2"
+pytest-factoryboy = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 
